--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.2.3",
     "react-router-dom": "^7.10.1",
     "lucide-react": "^0.561.0",
-    "framer-motion": "^12.23.26"
+    "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
+    "@gsap/react": "2.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
